--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -28,4 +28,29 @@
   <% end %>
 </div>
 
+<%= form_tag movies_path, method: :get, id: 'ratings_form', local: true do %>
+  
+  <div>
+    <label class="form-label me-2" for="sort_by">Sort by:</label>
+    <%= select_tag :sort_by,
+                   options_for_select([["Title", "title"],
+                                       ["Release date", "release_date"]],
+                                       @sort_by),
+                   id:    "sort_by",
+                   class: "form-select d-inline w-auto" %>
+  </div>
+  
+  Include:
+  <% @all_ratings.each do |rating| %>
+    <div class="form-check  form-check-inline">
+      <%= check_box_tag "ratings[#{rating}]", "1", @ratings_to_show.include?(rating), class: 'form-check-input' %>
+      <%= label_tag "ratings[#{rating}]", rating, class: 'form-check-label' %>
+    </div>
+
+  <% end %>
+
+  <%= submit_tag 'Refresh', id: 'ratings_submit', class: 'btn btn-primary' %>
+<% end %>
+
+
 <%= link_to 'Add new movie', new_movie_path, class: 'btn btn-primary' %>
